# Web3-Airdrop-Farming-Bot-Blockchain-Automation

./: README.md
airdrop-farming-bot 2/: README.md  pyproject.toml  requirements.txt  run.py
airdrop-farming-bot 2/data/: erc20_min_abi.json
airdrop-farming-bot 2/docs/: LinkedIn_Project.md  Resume_Bullets_CN_EN.md  Strategy.md  Video_Script.md
airdrop-farming-bot 2/playbooks/: nft_batch_mint_common.yaml  nft_batch_mint_with_abi.yaml  sepolia_swap_eth_to_usdc.yaml  stake_erc20_sample.yaml
airdrop-farming-bot 2/src/bot/: cli.py  scheduler.py
airdrop-farming-bot 2/src/bot/core/: config.py  logger.py  rpc.py  task.py  wallet.py
airdrop-farming-bot 2/src/bot/tasks/: mint_erc721.py  stake_erc20.py  swap_uniswap_v2.py
airdrop-farming-bot 2/src/bot/utils/: strategy.py  tx_helper.py
