[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airdrop-farming-bot"
version = "0.1.0"
description = "Playbook-driven EVM automation bot (swap / NFT mint / approve+stake) with dry-run, anti-sybil strategies, and CSV audit."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bot*"]
